# skillbridge

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/skillbridge/: course_crew.py  crew.py  flow.py  gaps.py  llm.py  main.py  models.py
src/skillbridge/config/: agents.yaml  course_agents.yaml  course_tasks.yaml  tasks.yaml
src/skillbridge/tools/: custom_tool.py
