[project]
name = "skillbridge"
version = "0.1.0"
description = "skillbridge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
skillbridge = "skillbridge.main:run"
run_crew = "skillbridge.main:run"
train = "skillbridge.main:train"
replay = "skillbridge.main:replay"
test = "skillbridge.main:test"
run_with_trigger = "skillbridge.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
